--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Create by : Ari & Selamat -->
 <resources>
     <color name="colorPrimary">#00867d</color>
     <color name="colorPrimaryDark">#00867d</color>
